# ProtocolPlugin

./: .coderabbit.yaml  .gitignore  README.md
Application/: .clang-format  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  project.code-workspace
Application/PluginInterface/: PluginInterface.h  QtPluginInterface.h
Application/Plugins/example/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.h
Application/ProtocolCore/: ProtocolCore.h  QtPluginInterface.h
Application/Scope/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Application/Scope/PluginManager/: PluginManager.cpp  PluginManager.h
Application/core/: PluginManager.cpp  PluginManager.h
Application/plugins/cpp/example/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.h  ExamplePluginTest.cpp
Application/tests/: CMakeLists.txt
Application/tests/plugin/: CMakeLists.txt  ExamplePluginTest.cpp
Info/: Plan.md  Plugin_Infrastructure_Specification.md
PythonPlugin/: .pre-commit-config.yaml  create_venv.py  project.code-workspace  pyproject.toml
PythonPlugin/src/: __init__.py  __main__.py
