[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonPlugin"
authors = [{ name = "Jens Geudens" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
]

dependencies = []

dynamic = ["version"]

[project.optional-dependencies]
development = [
    # Quality dependencies
    'black==25.12.0',
    'pydocstyle==6.3.0',
    'codespell==2.4.1',
    'mypy==1.19.1',
    'isort==7.0.0',
    'pylint==4.0.4',
    'pre-commit==4.5.1',
]

[tool.isort]
profile = "black"

[tool.mypy]
files = "src"
ignore_missing_imports = true
strict = true

[tool.doc8]
max-line-length = 120
verbose = 0
ignore = "D002,D004"

[tool.pylint.format]
max-line-length = 120
disable = "logging-fstring-interpolation"
min-similarity-lines = 10

[tool.pydocstyle]
convention = "google"

[tool.pytest]

[tool.codespell]
skip = "./venv,.mypy_cache,./build,*.patch,.git, data/*"
